# MHV4_monitor

./: .gitignore  Cargo.toml  README.md  command.sh  run.sh
public/: .env  next.config.mjs  package-lock.json  package.json
public/src/app/: custom.css  global-error.tsx  globals.css  layout.tsx  page.tsx
public/src/app/tailwind-test/: page.tsx
public/src/components/: StatusCircle.tsx  Table.tsx  apply-button.tsx  mhv4-table.tsx  onoff-button.tsx  print-button.tsx  rc-button.tsx  show-date.tsx
public/src/components/ui/: table.tsx
public/src/contexts/: MHV4Context.tsx
public/src/lib/: transformInitData.ts  transformSSEData.ts
src/: main.rs  mhv4.rs  shared.rs
tests/: test.rs
www/: custom.css  index.html  script.js
