[package]
name = "mhv4_monitor"
version = "0.3.2"
authors = ["Kodai Okawa <okawa@cns.s.u-tokyo.ac.jp>"]
description = "MHV4 remote control from web browser"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "command"
path = "src/bin/command.rs"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serialport = "4"
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
